<resources>
    <string name="app_name">RelativeLayoutProject</string>
    <string name="title_text">Read the following text and answer the questions</string>
    <string name="main_text">"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" </string>
    <string name="checkbox_title">Check the favorite city</string>
    <string name="radio_title">Did you like the content?</string>
    <string name="rate_title">Rate your experience</string>
    <string name="seekbar_text">Set your age (allowed 18 to 75): 18</string>
    <string name="switch_text">Pick light or dark</string>
</resources>